--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 //Import bootstrap-sprockets
 @import "bootstrap-sprockets";
 @import "font-awesome";
-
+@import "dataTables.bootstrap.min";
 //override theme variables
 $grid-float-breakpoint: 992px;
 $black: #333;
