add no_region to members

--- a/app/views/admin/members/_form.html.haml
+++ b/app/views/admin/members/_form.html.haml
@@ -4,6 +4,7 @@
   =f.input :phone, label: "Numéro de téléphone"
   =f.input :city, label: "Municipalité"
   =f.input :postal_code, label: "Code postal"
+  =f.input :no_region, label: "Numéro région"
   =f.input :status, label: "Statut", collection: [["Indésirable", "I"],["Désinscription", "D"],["Erreur de courriel", "CE"], ["Téléphone erronné ou inexistant", "TE"], ["Courriel et téléphone en erreur", "CE-TE"], ["No longer interested", "NLI"]]
 
   %p
