Inscription aux ateliers

--- a/app/views/admin/home/show.haml
+++ b/app/views/admin/home/show.haml
@@ -6,6 +6,7 @@
   %li= link_to "Engagement solennel", admin_engagements_path
   %li= link_to "Gérer les ACRQ", admin_hives_path, id: "manage-hives"
   %li= link_to "Gérer les signatures du manifeste", admin_members_path
+  %li= link_to "Gérer les ateliers", admin_workshops_path
   %li= link_to "Gérer les signatures de «L'appel»", admin_event_participants_path(2)
   %li= link_to "Voir le site dans un nouvel onglet", root_path, target: "_blank"
   %li= link_to("Se déconnecter", destroy_user_session_path, :method => :delete, id: "sign-out")
