Mise en ligne des ateliers avec la nouvelle arborescence

--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -2,7 +2,7 @@
   =f.input :name
   =f.input :start_date, as: :string, label: 'Date de l\'atelier', input_html: {class: "datepicker"}
   =f.input :start_time, as: :string, label: 'Heure de l\'atelier', input_html: {class: "timepicker"}
-  =f.input :description
+  =f.input :description, as: :trix_editor
   =f.input :animation
   =f.input :expertise
   =f.input :available_slots
