--- a/app/views/home/promotional_tools.haml
+++ b/app/views/home/promotional_tools.haml
@@ -25,17 +25,18 @@
         %ul.list
           %li
             =fa_icon "file-pdf-o"
+            =link_to "Assemblée citoyenne Centre Afrika de Montréal", "/assemblee_locale_centre_afrika.pdf", target: "_blank"
+          %li
+            =fa_icon "file-pdf-o"
             =link_to "Une constitution est l'acte de naissance d'un État légitime", asset_url("tract_acte_naissance.pdf"), target: "_blank"
           %li
             =fa_icon "file-pdf-o"
             =link_to "Affirmer la souveraineté du peuple du Québec", asset_url("tract_souverainete.pdf"), target: "_blank"
-          
+
           %li
             =fa_icon "file-pdf-o"
             =link_to "La constitution doit être écrite par le peuple", asset_url("tract_ppp.pdf"), target: "_blank"
-          
+
           %li
             =fa_icon "file-pdf-o"
             =link_to "Le pouvoir constituant", asset_url("tract_pouvoir_constituant.pdf"), target: "_blank"
-      
-    
