--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_self
  *= require devise_bootstrap_views
  *= require jquery-ui
+ *= require trix
  */
 
  // Example using 'Cerulean' bootswatch
