--- a/app/views/workshop_registrations/new.html.haml
+++ b/app/views/workshop_registrations/new.html.haml
@@ -3,9 +3,13 @@
 
 -breadcrumb :workshop_registration, @workshop
 
-%p.lead Notez que votre courriel et votre numéro de téléphone ne seront pas rendu public
-=simple_form_for([:workshop, @workshop_registration]) do |f|
-  =f.input :name, label: false, placeholder: "Nom complet", input_html: { autocomplete: 'off' }
-  =f.input :email, label: false, placeholder: "Adresse de courriel", input_html: { autocomplete: 'off' }
-  =f.input :phone, label: false, placeholder: "Numéro de téléphone", input_html: { autocomplete: 'off' }
-  =f.submit "M'inscrire", class: "btn btn-primary"
+.row
+  .col-sm-6
+    %p.lead Notez que votre courriel et votre numéro de téléphone ne seront pas rendus publics
+    =simple_form_for([:workshop, @workshop_registration]) do |f|
+      =f.input :name, label: false, placeholder: "Nom complet", input_html: { autocomplete: 'off' }
+      =f.input :email, label: false, placeholder: "Adresse de courriel", input_html: { autocomplete: 'off' }
+      =f.input :phone, label: false, placeholder: "Numéro de téléphone", input_html: { autocomplete: 'off' }
+      =f.submit "M'inscrire", class: "btn btn-primary"
+  .col-sm-6
+    =@workshop.description.html_safe
