--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -7,10 +7,9 @@
 
         .text-center= link_to "Répondre au sondage maintenant", sondage_path, class: "btn btn-info btn-lg"
   .col-sm-6
-    =link_to image_tag("constitution_citoyenne_quebec"), constitution_citoyenne_quebec_path, target: "_blank"
+    =link_to image_tag("constitution_citoyenne_quebec.jpg"), constitution_citoyenne_quebec_path, target: "_blank"
 
   .col-md-6
-
     %h3.sub-section=link_to(image_tag("assemblee_citoyenne_virtuelle.jpg", class: "img-responsive"), workshops_path)
     .youtube-container
       .youtube-player{"data-id" => "NvCW1Xat-5s"}
