Corriger bogue avec format d'heure

--- a/app/views/workshop_registrations/new.html.haml
+++ b/app/views/workshop_registrations/new.html.haml
@@ -12,4 +12,4 @@
       =f.input :name, label: false, placeholder: "Nom complet", input_html: { autocomplete: 'off' }
       =f.input :email, label: false, placeholder: "Adresse de courriel", input_html: { autocomplete: 'off' }
       =f.input :phone, label: false, placeholder: "Numéro de téléphone", input_html: { autocomplete: 'off' }
-      =f.submit "M'inscrire", class: "btn btn-primary"
+      =f.submit "Confirmer mon inscription", class: "btn btn-primary"
