tri par défault = date de la signature

--- a/app/views/admin/members/index.haml
+++ b/app/views/admin/members/index.haml
@@ -53,8 +53,8 @@
     $.fn.dataTable.ext.order.intl( 'fr' ); // French locale
     $.fn.dataTable.moment( 'D/M/YYYY' );
 
-    $('#example').DataTable();
     $('.datatable').dataTable({
+      order: [[ 9, "desc" ]],
       ajax: "members",
       "deferRender": true,
       pageLength: 20,
