corrections à la gestion des signatures

--- a/app/views/members/_form.haml
+++ b/app/views/members/_form.haml
@@ -27,4 +27,5 @@
 :javascript
   $(function() {
     $('#member_postal_code').inputmask("A9A 9A9");
+    $('#member_phone').inputmask("(999) 999-9999");
   });
