ajouter onglet notre organisation

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -39,6 +39,14 @@
         .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li= link_to "Accueil", root_path
+            %li.dropdown
+              %a{href: "#",class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
+                Notre organisation
+                %span.caret
+              %ul.dropdown-menu
+                %li= link_to "OBNL", obnl_path
+                %li= link_to "Statuts et règlements", statuts_reglements_path
+
             %li= link_to "Manifeste", manifest_path, id: "sign-manifest"
             %li= link_to "Projet de loi", projet_de_loi_path;
 
