add comment to assemblee_virtuelle

--- a/app/views/home/assemblee_virtuelle.html.haml
+++ b/app/views/home/assemblee_virtuelle.html.haml
@@ -7,3 +7,6 @@
 %p= link_to image_tag("mumble-logo.png"), mumble_path
 
 %p Dès le 2 juin prochain, vous pourrez suivre l'horaire des assemblées.
+
+Attention!
+Cette activité est maintenant terminée.
