add comment to assemblee_virtuelle

--- a/app/views/home/assemblee_virtuelle.html.haml
+++ b/app/views/home/assemblee_virtuelle.html.haml
@@ -8,5 +8,4 @@
 
 %p Dès le 2 juin prochain, vous pourrez suivre l'horaire des assemblées.
 
-Attention!
-Cette activité est maintenant terminée.
+%p Attention! Cette activité est maintenant terminée.
