Ajouter les informations concernant l'assemblée générale de fondation de l'ACCQ.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -71,7 +71,7 @@
     -if (controller_name == 'home' && action_name=='show')
       %header.hidden-xs
         .text-center
-          =link_to image_tag("cover_accq.png"), mumble_path, style: "height: 450px"
+          =link_to image_tag("cover_fondation.png",class: "img-responsive"), obnl_path, style: "height: 450px"
     -else
       %header.text-center
         =image_tag "small_bg.jpg", class: "img-responsive", style: "margin: auto"
