--- a/app/views/home/obnl.html.haml
+++ b/app/views/home/obnl.html.haml
@@ -1,13 +1,16 @@
 -content_for :page_title do
-  OBNL
+  #{link_to "Invitation à l'Assemblée générale de fondation de l'ACCQ, le 30 novembre 2019, à Saint-Hyacinthe", "invitation_fondation_accq.pdf", target: "_blank"}
 
 -breadcrumb :obnl
 
-%p
-  Comme vous le savez certainement, l’Alliance pour une constituante citoyenne du Québec a été constituée auprès du Registraire des entreprises du Québec le 5 février 2016 en tant qu’organisme à but non lucratif (OBNL).
 
-%p Prochainement, vous serez invité-e-s à la première assemblée générale pour formaliser notre organisation. Tous les signataires du manifeste (en bleu pour montrer le lien vers la page du manifeste) sont invités à devenir membres en règle de façon à pouvoir participer, lors de cette assemblée, à l'élection de notre conseil d'administration.
 
-%p Nos bénévoles ont rédigé les statuts et règlements (lien) de l'OBNL que nous vous invitons à lire puisqu'ils devront être entérinés lors de cette rencontre.
+%p Comme vous le savez certainement, l’Alliance pour une constituante citoyenne du Québec a été constituée auprès du Registraire des entreprises du Québec le 5 février 2016 en tant qu’organisme à but non lucratif (OBNL).
 
-%p Au plaisir de  nous voir tous rassemblés et de nous donner les moyens d'accomplir notre mission (lien vers la mission) à l'ACCQ.
+%p Vous êtes dès maintenant invité.e à l'#{link_to "Assemblée générale de fondation", "invitation_fondation_accq.pdf", target: "_blank"}, visant à formaliser notre organisation. Tous les signataires du #{link_to "manifeste", manifest_path} sont invités à devenir membres en règle de façon à pouvoir participer, lors de cette assemblée, à l'élection de notre conseil d'administration.
+
+%p Nos bénévoles ont rédigé les #{link_to "statuts et règlements", statuts_reglements_path} de l'OBNL que nous vous invitons à lire puisqu'ils devront être entérinés lors de cette rencontre.
+
+%p Au plaisir de nous voir tous rassemblés et de nous donner les moyens d'accomplir la #{link_to "mission", mission_path} que se donne l'ACCQ.
+
+%p= link_to "Consulter le PDF pour de plus amples informations", "invitation_fondation_accq.pdf", target: "_blank", class: "btn btn-info"
