Retirer le lien sur le titre de la page OBNL. Cela causait un bogue d'affichage avec l'attribut title de la page (meta)

--- a/app/views/home/obnl.html.haml
+++ b/app/views/home/obnl.html.haml
@@ -1,5 +1,5 @@
 -content_for :page_title do
-  #{link_to "Invitation à l'Assemblée générale de fondation de l'ACCQ, le 30 novembre 2019, à Saint-Hyacinthe", "invitation_fondation_accq.pdf", target: "_blank"}
+  Invitation à l'Assemblée générale de fondation de l'ACCQ, le 30 novembre 2019, à Saint-Hyacinthe
 
 -breadcrumb :obnl
 
