--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -17,7 +17,7 @@
 
     .youtube-container
       .youtube-player{"data-id" => "Lh71SO0Ggy4"}
-    %p Plusieurs autres vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
+    %p Plusieurs autres vidéos sont maintenant disponibles dans la #{link_to "médiathèque", mediatheque_path}!
 
 
     %h3.sub-section Aimez notre page Facebook
