"nous joindre" mis à jour.

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -5,29 +5,24 @@
 
 .row
   .col-md-6
-    %p Voici les membres de l’équipe de coordination nationale de l’ACCQ, en date du 30 mars 2018  :
+    %p Lors de l’Assemblée générale de l’ACCQ de novembre 2019, nous avons élu un conseil d’administration de onze (11) membres. Voici la composition de notre nouveau CA :
 
     %ul.list
-      %li Alain M. Bergeron - #{mail_to "alainmbergeron@hotmail.com"} - ACRQ 05 - Estrie
-      %li Michèle Clément - #{mail_to "michele.clement44@gmail.com"} - ACRQ 16 - Montérégie
-      %li Céline Couturier - #{mail_to "celinecouturier71@gmail.com"} - ACRQ 03 - Capitale-Nationale
-      %li Steve Graindlair - #{mail_to "stevegraindlair@gmail.com"} - ACRQ 12 - Chaudière-Appalaches
-      %li Luc Harbour - #{mail_to "lucharbour@gmail.com"} - ACRQ 05 - Estrie
-      %li Joanne Lamy - #{mail_to "joanne.lamy@hotmail.com"} - ACRQ 06 - Montréal
-      %li Danielle Morin – #{mail_to "daniellemorin2013@hotmail.com"} - ACRQ 05 - Estrie
-      %li Daniel Raunet - #{mail_to "draunet@hotmail.fr"} - ACRQ 16 - Montérégie
-      %li Gérard Sévigny - #{mail_to "sevigny.ge@videotron.ca"} - ACRQ 15 - Laurentides
+      %li Président: Éric Maisonneuve / 06 - Montréal / #{mail_to "ericmaison68@gmail.com"}
+      %li Vice-président: Alain M. Bergeron / 05 - Estrie / #{mail_to "alainmbergeron@hotmail.com"}
+      %li Trésorier: Luc Harbour / 05 - Estrie / #{mail_to "lucharbour@gmail.com"}
+      %li Secrétaire: Danielle Morin / 05 – Estrie #{mail_to "daniellemorin2013@hotmail.com"}
   .col-md-6
-    %p Notez que plusieurs comités sont formés ou sont en cours de formation, pour atteindre notre objectif d’ici la prochaine élection d’octobre 2018 :
+    %p Administratrices / administrateurs:
 
     %ul.list
-      %li Activation des régions – Responsable : Danielle Morin
-      %li Argumentaire – Responsable : Alain M. Bergeron
-      %li Communications – Responsable : Daniel Raunet
-      %li Projet de loi - Responsables : Alain M. Bergeron et Daniel Raunet
-      %li Financement / Enregistrement -
-      %li Multimédia (TI) -  Responsables : François Lamontagne et Marc-André Robillard
-      %li Éducation populaire / Gentils virus -
+      %li Chantal Jolocoeur / 14 - Lanudière / #{mail_to "chantal.jolicoeur24@hotmail.fr"}
+      %li Martine Labossière / 16 - Montérégie / #{mail_to "grand-heron@hotmail.com"}
+      %li Yves legault / 06 - Montréal / #{mail_to "yves.yll.legault@videotron.ca"}
+      %li Philippe Malric / 06 - Montréal / #{mail_to "malric.philippe@gmail.com"}
+      %li Thierry Pasquier / 16 - Montérégie / #{mail_to "guerrierinterieur@gmail.com"}
+      %li Daniel Raunet / 16 - Montérégie / #{mail_to "draunet@hotmail.fr"}
+      %li Béatrice Séjourné-Badin / 06 - Montréal / #{mail_to "beasbad@gmail.com"}
 
     %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@accq.quebec"}.
 
