"nous-joindre" mis à jour (#2)

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -12,10 +12,7 @@
       %li Vice-président: Alain M. Bergeron / 05 - Estrie / #{mail_to "alainmbergeron@hotmail.com"}
       %li Trésorier: Luc Harbour / 05 - Estrie / #{mail_to "lucharbour@gmail.com"}
       %li Secrétaire: Danielle Morin / 05 – Estrie #{mail_to "daniellemorin2013@hotmail.com"}
-  .col-md-6
-    %p Administratrices / administrateurs:
-
-    %ul.list
+      %li Administratrices et administrateurs:
       %li Chantal Jolocoeur / 14 - Lanudière / #{mail_to "chantal.jolicoeur24@hotmail.fr"}
       %li Martine Labossière / 16 - Montérégie / #{mail_to "grand-heron@hotmail.com"}
       %li Yves legault / 06 - Montréal / #{mail_to "yves.yll.legault@videotron.ca"}
@@ -23,6 +20,19 @@
       %li Thierry Pasquier / 16 - Montérégie / #{mail_to "guerrierinterieur@gmail.com"}
       %li Daniel Raunet / 16 - Montérégie / #{mail_to "draunet@hotmail.fr"}
       %li Béatrice Séjourné-Badin / 06 - Montréal / #{mail_to "beasbad@gmail.com"}
+
+  .col-md-6
+    %p Notez que plusieurs comités sont formés ou sont en cours de formation. Voici la distribution des responsabilités dans les divers comités:
+
+    %ul.list
+      %li Communications : Éric Maisonneuve
+      %li Financement : Danielle Morin et Luc Harbour
+      %li Instruction populaire : Yves Legault
+      %li Mobilisation et recrutement : Chantal Jolicoeur et Alain Bergeron
+      %li Multimédia (TI) : François Lamontagne et Yves Legault
+      %li Recherche : Martine Labossière, Yves Legault et Philippe Malric
+      %li Requêtes et recommandations : Alain Bergeron et Daniel Raunet
+      %li Secrétariat : Danielle Morin
 
     %p Pour tout intérêt à vous impliquer dans l’un ou l’autre de ces comités, écrivez-nous à #{mail_to "info@accq.quebec"}.
 
