"nous-joindre" mis à jour (#3)

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -13,7 +13,7 @@
       %li Trésorier: Luc Harbour / 05 - Estrie / #{mail_to "lucharbour@gmail.com"}
       %li Secrétaire: Danielle Morin / 05 – Estrie #{mail_to "daniellemorin2013@hotmail.com"}
       %li Administratrices et administrateurs:
-      %li Chantal Jolocoeur / 14 - Lanudière / #{mail_to "chantal.jolicoeur24@hotmail.fr"}
+      %li Chantal Jolicoeur / 14 - Lanaudière / #{mail_to "chantal.jolicoeur24@hotmail.fr"}
       %li Martine Labossière / 16 - Montérégie / #{mail_to "grand-heron@hotmail.com"}
       %li Yves legault / 06 - Montréal / #{mail_to "yves.yll.legault@videotron.ca"}
       %li Philippe Malric / 06 - Montréal / #{mail_to "malric.philippe@gmail.com"}
