--- a/app/views/home/projet_de_loi.html.haml
+++ b/app/views/home/projet_de_loi.html.haml
@@ -20,12 +20,12 @@
 
   %ol{type: "a"}
     %li d’affirmer la prééminence de la souveraineté populaire;
-    %li de définir les caractéristiques de l’État et de la citoyenneté québécoise ainsi que ses relations avec les Premières Nations et les minorités historiques;
+    %li de définir les caractéristiques de l’État et de la citoyenneté québécoise ainsi que ses relations avec les Premières Nations et la minorité historique;
     %li d’énumérer les valeurs et les choix de société fondamentaux de la société québécoise dans les divers secteurs de la vie et des ressources collectives;
     %li de définir les droits humains en matière d’environnement, dont le droit à un environnement sain, l’accès à l’eau potable, le respect des écosystèmes, l’utilisation durable du territoire et de ses ressources;
     %li de décrire l’organisation des pouvoirs législatif, exécutif et judiciaire et les relations entre eux;
     %li de préciser les moyens par lesquels les citoyens pourront participer en permanence et de façon contraignante aux décisions qui les concernent, ainsi que les pouvoirs des citoyens au plan territorial;
-    %li d’établir les modalités et le calendrier de l’entrée en vigueur de ces dispositions, y compris, le cas échéant, de celles modifiant les lois ou l’ordre constitutionnel du Canada;
+    %li d’établir les modalités et le calendrier de l’entrée en vigueur de ces dispositions, y compris, le cas échéant, de celles modifiant les lois provinciales et fédérales;
     %li de définir une procédure citoyenne d’amendement de la constitution pour les générations futures.
 
   %h3 2) LE CALENDRIER
