--- a/app/views/home/media.html.haml
+++ b/app/views/home/media.html.haml
@@ -1,6 +1,10 @@
 -content_for :page_title do
   Communiqués de presse
 
+%h4 L'ACCQ demande à l'Assemblée Nationale d'agir (11 décembre 2019)
+%ul
+  %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp-dec-2019.pdf")
+
 %h4 L'ACCQ interpelle le gouvernement Legault (10 octobre 2018)
 %ul
   %li= link_to "Communiqué de presse (PDF)", asset_path("medias/cp_post_electoral.pdf")
