--- a/app/views/home/bibliotheque.haml
+++ b/app/views/home/bibliotheque.haml
@@ -9,6 +9,9 @@
       Documents de travail
     %ul
       %li
+        Documents de référence pour les signataires
+        =link_to "Télécharger le document (.pdf)", "/document_reference_pour_signataires.pdf", target: "_blank"
+      %li
         Mémoire collaboratif de l’ACCQ présenté à Constituons! le 17 février 2019.
         =link_to "Télécharger le document (.pdf)", "/memoire_collaboratif_ACCQ_constituons.pdf", target: "_blank"
       %li
