--- a/app/views/home/local_workshops.html.haml
+++ b/app/views/home/local_workshops.html.haml
@@ -1,6 +1,6 @@
 -content_for :page_title do
-  Ateliers constituants locaux
+  Rencontres informatives
 
 -breadcrumb :local_workshops
 
-=image_tag "assemblee_locale_centre_afrika.jpg"
+%p Notez que nos rencontres informatives locales reprendront suite à la conférence de presse que nous entendons convoquer au printemps.
