Ajouter titre 'Pour les démocrates' dans page discutoire

--- a/app/views/home/constituons.html.haml
+++ b/app/views/home/constituons.html.haml
@@ -14,7 +14,7 @@
 
 %hr
 %h3 La constitution de Constituons! - Un canevas de départ intéressant...
-=link_to(image_tag("constitution_citoyenne_quebec"), constitution_citoyenne_quebec_path, target: "_blank")
+=link_to("Pour lire la constitution citoyenne rédigée par l'Assemblée constituante de Constituons", constitution_citoyenne_quebec_path, target: "_blank")
 :javascript
   (function() {
       var v = document.getElementsByClassName("youtube-player");
